Too many accessible nodes were marked as clickable on Android

Now only nodes that are actually focusable or clickable are marked as
clickable. To make sure TalkBack reaches all interesting nodes, fix the
code that handles ACTION_NEXT_HTML_ELEMENT so that it returns all focusable
nodes in addition to leaf nodes with text.

BUG=645167

Review-Url: https://codereview.chromium.org/2323043002
Cr-Commit-Position: refs/heads/master@{#425626}

Former-commit-id: 33d97d8148948cade0efe3e97c50f8473a225ee9